roles/monitor/monitorstack/files/ingress/ingress-grafana.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-grafana

spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`sysop.mccannclan.family`) && PathPrefix(`/monitor`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
    middlewares:
    - https-only
    - chain-authelia
  #  - chain-basic-auth
  #  - chain-no-auth
  tls:
    store:
      name: default
